EXTRA_DIST =\
	AboutSessionMonitor.ui \
	BoardWindow.ui \
	EntityListWindow.ui \
	InterfaceWindow.ui \
	LoggerWindow.ui \
	LoggingPolicy.ui \
	MainWindow.ui \
	MessageWindow.ui \
	PluginInstanceSelection.ui \
	PluginWindowPopupMenu.ui \
	StepperWindow.ui \
	board.ui

EXTRA_DIST +=\
	ecell.png \
	ecell32-1.png \
	ecell32-2.png \
	ecell32-3.png \
	ecell32-4.png \
	ecell32-5.png \
	ecell32-6.png \
	ecell32-7.png \
	ecell32-8.png \
	ecell32.png \
	ecell_large.png

EXTRA_DIST +=\
	icon_board.png \
	icon_ecell.png \
	icon_entity.png \
	icon_interface.png \
	icon_logger.png \
	icon_message.png \
	icon_start.png \
	icon_step.png \
	icon_stepper.png \
	icon_stop.png
